fix(classes.scss):Fix overlapping banner on project images

--- a/_id.scss
+++ b/_id.scss
@@ -27,5 +27,5 @@
 #projects {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: left;
 }
